<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.16">
  <POU Name="FB_ScrollPump" Id="{95800034-a8e9-430e-af6e-1fa7a649fe90}" SpecialFunc="None">
    <Declaration><![CDATA[(* This Function block provides basic  control for Scroll Pumps *)
(* Turn on scroll pump if the Turbo Vent Valve is closed. *)
(* Cannot turn off scroll pump if turb is running. delay scroll off 150s.*)

FUNCTION_BLOCK FB_ScrollPump
VAR_IN_OUT

END_VAR
VAR_OUTPUT
    {attribute 'pytmc' := '
    pv:
    '}
    iq_stPFO	:	ST_RoughPump;
END_VAR
VAR_INPUT
    TurboIsON : BOOL;
    xExtIlk : BOOL;
END_VAR
VAR
    Tmr_TOF : TOF;
    tTimerDuration : Time:= T#150S;
    //Previous_RunSW : BOOL;
    // Digital Output to be linked
    q_xRunDo AT%Q*	:   BOOL;
END_VAR

]]></Declaration>
    <Implementation>
      <ST><![CDATA[//Turn on scroll pump if the Turbo Vent Valve is closed. So you are not just
// pumping air and accomplishing nothing

// cannot turn off scroll pump if turb is running. delay scroll off 150s.
iq_stPFO.xIlkOK := xExtIlk;// and NOT Tmr_TOF.Q;

Tmr_TOF(IN:=TurboIsON, PT := tTimerDuration);

IF iq_stPFO.xIlkOK THEN
    iq_stPFO.q_xRunDo := (Tmr_TOF.Q OR iq_stPFO.pv_xRunSW);
ELSE
    iq_stPFO.q_xRunDo := FALSE;
END_IF

iq_stPFO.pv_xRunSW := iq_stPFO.q_xRunDo;

(*State evaluation*)
IF NOT iq_stPFO.q_xRunDo THEN
    iq_stPFO.eState := pumpSTOPPED;
ELSE
    iq_stPFO.eState := pumpRUNNING;
END_IF

(*soft io Mapping*)
IO();



 ]]></ST>
    </Implementation>
    <Action Name="IO" Id="{47ae7053-5350-4e8f-94b2-400e5380039f}">
      <Implementation>
        <ST><![CDATA[q_xRunDo:= iq_stPFO.q_xRunDo;]]></ST>
      </Implementation>
    </Action>
    <Method Name="M_Run" Id="{eba797a4-1012-42f7-b194-fa0d2f89ba57}">
      <Declaration><![CDATA[METHOD PUBLIC M_Run : BOOL
VAR_INPUT
    run:bool; // set to true to run, false to stop;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[
this^.iq_stPFO.pv_xRunSW := run;]]></ST>
      </Implementation>
    </Method>
  </POU>
</TcPlcObject>